--- a/root/about/index.html
+++ b/root/about/index.html
@@ -22,8 +22,8 @@
               <li class="nav-menu_item"><a href="#">Blog</a></li>
               <li class="nav-menu_item"><a href="#">About</a></li>
               <li class="nav-menu_item"><a href="#">Contact</a></li>
-              <li class="nav-menu_item nav-menu_item__phone"><a href="tel:713-985-9944">713-985-9944  </a></li>
-              <li class="nav-menu_item nav-menu_item__phone"><a href="tel:713-985-9944">Nhận Tư vấn </a></li>
+              <li class="nav-menu_item nav-menu_item__phone"><a href="tel:713-985-9944">713-985-9944</a></li>
+              <li class="nav-menu_item nav-menu_item__phone not-before"><a href="tel:713-985-9944">Nhận Tư vấn</a></li>
             </ul>
             <div class="nav-menu_mobile" onclick="toggleMenu()">
               <svg id="open" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
