--- a/root/index.html
+++ b/root/index.html
@@ -23,8 +23,8 @@
               <li class="nav-menu_item"><a href="#">Blog</a></li>
               <li class="nav-menu_item"><a href="#">About</a></li>
               <li class="nav-menu_item"><a href="#">Contact</a></li>
-              <li class="nav-menu_item nav-menu_item__phone"><a href="tel:713-985-9944">713-985-9944  </a></li>
-              <li class="nav-menu_item nav-menu_item__phone"><a href="tel:713-985-9944">Nhận Tư vấn </a></li>
+              <li class="nav-menu_item nav-menu_item__phone"><a href="tel:713-985-9944">713-985-9944</a></li>
+              <li class="nav-menu_item nav-menu_item__phone not-before"><a href="tel:713-985-9944">Nhận Tư vấn</a></li>
             </ul>
             <div class="nav-menu_mobile" onclick="toggleMenu()">
               <svg id="open" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -50,7 +50,7 @@
               <div class="content-wrapper">
                 <div class="content">
                   <h1>THE ULTIMATE GETAWAY VEHICLE</h1>
-                  <p>With speed, control, and confidence on any terrain, Diverge is the most capable gravel bike ever made. Switching from Midwest gravel at Mach 5 to rutted single track with ease, nothing helps you escape faster than Diverge.</p><a class="button" href="">Learn More</a>
+                  <p>With speed, control, and confidence on any terrain, Diverge is the most capable gravel bike ever made. Switching from Midwest gravel at Mach 5 to rutted single track with ease, nothing helps you escape faster than Diverge.</p><a class="button" href="">Đăng Ký Tư Vấn</a>
                 </div>
               </div>
             </div>
@@ -60,7 +60,7 @@
               <div class="content-wrapper content-right">
                 <div class="content">
                   <h1>ONE BIKE TO RULE THEM ALL</h1>
-                  <p>Morph Sagan’s superhuman speed with Alaphilippe’s climbing power and you’ve got the Tarmac SL7. The bike that knows no compromise. Climb on the lightest bike the rules allow, sprint on the fastest – all with legendary Tarmac handling. The only choice you need to make is when to attack.</p><a class="button" href="">Learn More</a>
+                  <p>Morph Sagan’s superhuman speed with Alaphilippe’s climbing power and you’ve got the Tarmac SL7. The bike that knows no compromise. Climb on the lightest bike the rules allow, sprint on the fastest – all with legendary Tarmac handling. The only choice you need to make is when to attack.</p><a class="button" href="">Đăng Ký Tư Vấn</a>
                 </div>
               </div>
             </div>
@@ -70,7 +70,7 @@
               <div class="content-wrapper">
                 <div class="content">
                   <h1>THINK FASTEST</h1>
-                  <p>You’re looking at the fastest XC bikes in the world. Building on the legacy of the winningest full suspension XC bike in history, these freshly redesigned Epics deliver an unmatched combination of pedaling efficiency, light weight and control.</p><a class="button" href="">Learn More</a>
+                  <p>You’re looking at the fastest XC bikes in the world. Building on the legacy of the winningest full suspension XC bike in history, these freshly redesigned Epics deliver an unmatched combination of pedaling efficiency, light weight and control.</p><a class="button" href="">Đăng Ký Tư Vấn</a>
                 </div>
               </div>
             </div>
