--- a/root/index.html
+++ b/root/index.html
@@ -41,9 +41,7 @@
       </header>
       <main class="l-main">
         <div class="swiper">
-          <!-- Additional required wrapper-->
           <div class="swiper-wrapper">
-            <!-- Slides-->
             <div class="swiper-slide">
               <div class="swiper-image" style="background: url('https://www.specialized.com/medias/03-ROAD-3212-Hero-2800x1620.jpg?context=bWFzdGVyfGltYWdlc3w2OTkyMTN8aW1hZ2UvanBlZ3xpbWFnZXMvaGJhL2g5Yi85MTMxMDkzODUyMTkwLmpwZ3xjMDI3ZWM3OGVhMzZmMjY3NDcxYzg4OTQxNmM5YTFhMDU3OGY5MmQxOWRkMTcyMWQzZjYxNjFmMmI5NTdjOGU4') no-repeat right bottom; background-size:cover;"></div>
               <div class="overlay"></div>
@@ -75,15 +73,44 @@
               </div>
             </div>
           </div>
-          <!-- If we need pagination-->
           <div class="swiper-pagination"></div>
-          <!-- If we need navigation buttons-->
           <div class="swiper-nav-wrapper">
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
           </div>
-          <!-- If we need scrollbar-->
           <div class="swiper-scrollbar"></div>
+        </div>
+        <div class="l-container">
+          <div class="c-message">
+            <div class="c-message_inner">
+              <p>We are a group of professional estate planners and insurance specialists. We are passionate about helping you build generational</p>
+            </div>
+          </div>
+          <div class="c-solution">
+            <div class="c-solution_inner">
+              <h3>Our Solution</h3>
+              <ul>
+                <li>
+                  <div class="c-solution_tag">Bảo Hiểm Đầu Tư</div>
+                  <div class="c-solution_name">Hành Trình Hạnh Phúc</div>
+                  <div class="c-solution_icon"><img src="assets/images/crop.png"></div>
+                  <div class="c-solution_extra">Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống</div>
+                </li>
+                <li>
+                  <div class="c-solution_tag">Bảo Hiểm Đầu Tư</div>
+                  <div class="c-solution_name">Hành Trình Hạnh Phúc</div>
+                  <div class="c-solution_icon"><img src="assets/images/crop.png"></div>
+                  <div class="c-solution_extra">Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống</div>
+                </li>
+                <li>
+                  <div class="c-solution_tag">Bảo Hiểm Đầu Tư</div>
+                  <div class="c-solution_name">Hành Trình Hạnh Phúc</div>
+                  <div class="c-solution_icon"><img src="assets/images/crop.png"></div>
+                  <div class="c-solution_extra">Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống</div>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </main>
       <footer class="c-footer">
