--- a/root/index.html
+++ b/root/index.html
@@ -111,6 +111,9 @@
               </ul>
             </div>
           </div>
+          <div class="c-button"><a class="c-button_inner bounceIn" href="#">
+              <p>Bạn có muốn làm chủ tương lai?</p>
+              <p>Đừng ngần ngại tìm hiểu cùng Jolie!</p></a></div>
         </div>
       </main>
       <footer class="c-footer">
