--- a/root/index.html
+++ b/root/index.html
@@ -114,6 +114,27 @@
           <div class="c-button"><a class="c-button_inner bounceIn" href="#">
               <p>Bạn có muốn làm chủ tương lai?</p>
               <p>Đừng ngần ngại tìm hiểu cùng Jolie!</p></a></div>
+          <div class="c-trust"> 
+            <h3>Có 1000+ khách hàng đã lựa chọn đồng hành cùng Jolie, bởi vì:</h3>
+            <p> had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no   </p>
+            <ul> 
+              <li> 
+                <div class="c-trust_icon"> <img src="assets/images/crop.png"></div>
+                <h3>Compare Quotes  </h3>
+                <p>Compare life insurance quotes with no obligation to buy.</p>
+              </li>
+              <li> 
+                <div class="c-trust_icon"> <img src="assets/images/crop.png"></div>
+                <h3>Compare Quotes  </h3>
+                <p>Compare life insurance quotes with no obligation to buy.</p>
+              </li>
+              <li> 
+                <div class="c-trust_icon"> <img src="assets/images/crop.png"></div>
+                <h3>Compare Quotes  </h3>
+                <p>Compare life insurance quotes with no obligation to buy.                  </p>
+              </li>
+            </ul>
+          </div>
         </div>
       </main>
       <footer class="c-footer">
