--- a/root/index.html
+++ b/root/index.html
@@ -93,19 +93,19 @@
                 <li>
                   <div class="c-solution_tag">Bảo Hiểm Đầu Tư</div>
                   <div class="c-solution_name">Hành Trình Hạnh Phúc</div>
-                  <div class="c-solution_icon"><img src="assets/images/crop.png"></div>
+                  <div class="c-solution_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
                   <div class="c-solution_extra">Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống</div>
                 </li>
                 <li>
                   <div class="c-solution_tag">Bảo Hiểm Đầu Tư</div>
                   <div class="c-solution_name">Hành Trình Hạnh Phúc</div>
-                  <div class="c-solution_icon"><img src="assets/images/crop.png"></div>
+                  <div class="c-solution_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
                   <div class="c-solution_extra">Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống</div>
                 </li>
                 <li>
                   <div class="c-solution_tag">Bảo Hiểm Đầu Tư</div>
                   <div class="c-solution_name">Hành Trình Hạnh Phúc</div>
-                  <div class="c-solution_icon"><img src="assets/images/crop.png"></div>
+                  <div class="c-solution_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
                   <div class="c-solution_extra">Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống</div>
                 </li>
               </ul>
@@ -114,33 +114,50 @@
           <div class="c-button"><a class="c-button_inner bounceIn" href="#">
               <p>Bạn có muốn làm chủ tương lai?</p>
               <p>Đừng ngần ngại tìm hiểu cùng Jolie!</p></a></div>
-          <div class="c-trust"> 
+          <div class="c-trust">
             <h3>Có 1000+ khách hàng đã lựa chọn đồng hành cùng Jolie, bởi vì:</h3>
-            <p> had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no   </p>
-            <ul> 
-              <li> 
-                <div class="c-trust_icon"> <img src="assets/images/crop.png"></div>
-                <h3>Compare Quotes  </h3>
+            <p> had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no</p>
+            <ul>
+              <li>
+                <div class="c-trust_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
+                <h3>Compare Quotes</h3>
                 <p>Compare life insurance quotes with no obligation to buy.</p>
               </li>
-              <li> 
-                <div class="c-trust_icon"> <img src="assets/images/crop.png"></div>
-                <h3>Compare Quotes  </h3>
+              <li>
+                <div class="c-trust_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
+                <h3>Compare Quotes</h3>
                 <p>Compare life insurance quotes with no obligation to buy.</p>
               </li>
-              <li> 
-                <div class="c-trust_icon"> <img src="assets/images/crop.png"></div>
-                <h3>Compare Quotes  </h3>
-                <p>Compare life insurance quotes with no obligation to buy.         </p>
+              <li>
+                <div class="c-trust_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
+                <h3>Compare Quotes</h3>
+                <p>Compare life insurance quotes with no obligation to buy.</p>
               </li>
             </ul>
           </div>
-          <div class="c-boss"> 
-            <div class="c-boss_img"> <img src="https://api.lorem.space/image/movie?w=400&amp;h=500" alt=""></div>
-            <div class="c-boss_content"> 
-              <h3>Giới Thiệu </h3>
+          <div class="c-boss">
+            <div class="c-boss_img"><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=400&amp;h=500" alt=""></div>
+            <div class="c-boss_content">
+              <h3>Giới Thiệu</h3>
               <p>JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life. With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of life insurance. From college funding, retirement saving plan, income protection to living benefits, what life insurance can do is not only to protect you and your loved one during the toughest moment but also to improve significantly the quality of life while you are still living.</p>
             </div>
+            <ul>
+              <li><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
+              <li><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
+              <li><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
+              <li><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
+            </ul>
+          </div>
+          <div class="c-video">
+            <h3>Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?</h3>
+            <ul>
+              <li>
+                <iframe src="https://www.youtube.com/embed/CXE5hkd0XLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+              </li>
+              <li>
+                <iframe src="https://www.youtube.com/embed/CXE5hkd0XLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+              </li>
+            </ul>
           </div>
         </div>
       </main>
