--- a/root/index.html
+++ b/root/index.html
@@ -181,18 +181,26 @@
                   <h4>Diễn viên hài</h4>
                   <p> To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.</p>
                 </div>
-                <div class="c-user_item">
-                  <div class="c-user_img"><img src="https://api.lorem.space/image/fashion?w=250&amp;h=250" alt=""></div>
-                  <h4>Diễn viên hài</h4>
-                  <p> To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.</p>
-                </div>
               </div>
             </div>
           </div>
         </div>
       </main>
       <footer class="c-footer">
-        <div class="l-container"></div>
+        <div class="l-container">
+          <ul class="c-footer__btn">
+            <li> <a href="#">Contact</a></li>
+            <li> <a href="#">About </a></li>
+          </ul>
+          <div class="c-footer__content"> 
+            <p>This site provides life insurance information and quotes. Each rate shown is a quote based on information provided by the carrier. No portion of preciouslifeagent.com may be copied, published or distributed in any manner for any purpose without prior written authorization of the owner.</p>
+            <p>Disclaimer <br> Every effort has been made to represent the services by IAA (Independent Alliance Agency) and potential. Examples added to this website should not be interpreted as a promise or guarantee. Results, outcome, or costs may vary depending on various factors and conditions.</p>
+            <p>We make no claim that you will receive the same monthly payment or exact services as other individuals, there is no commitment required. Where specific examples and testimonials are from real individuals, there is no guarantee you will have the same result. Results and policies may vary.</p>
+          </div>
+          <div class="c-footer__copyright">  
+            <p>Copyright © 2020 preciouslifeagent.com – All rights reserved.</p>
+          </div>
+        </div>
       </footer>
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
