--- a/root/index.html
+++ b/root/index.html
@@ -184,6 +184,47 @@
               </div>
             </div>
           </div>
+          <div class="c-contact"> 
+            <ul> 
+              <li> 
+                <h3>Đăng ký dịch vụ Marketing </h3>
+                <p>Sự Tận tâm và Kỹ lưỡng chính là hai yếu tố tiên quyết được đội ngũ của Jolie đặt vào trong từng hợp đồng, để mỗi khách hàng đều nắm được tường tận những quỹ tài chính mà đang làm chủ.</p>
+              </li>
+              <li>
+                <form action="/signup" method="post">
+                  <p>
+                    <label>First name</label><br>
+                    <input type="text" name="first_name">
+                  </p>
+                  <p>
+                    <label>Last name</label><br>
+                    <input type="text" name="last_name">
+                  </p>
+                  <p>
+                    <label>Email</label><br>
+                    <input type="email" name="email" required="">
+                  </p>
+                  <p>
+                    <label>Phone number</label><br>
+                    <input type="tel" name="phone">
+                  </p>
+                  <p>
+                    <label>Password</label><br>
+                    <input type="password" name="password">
+                  </p>
+                  <p>
+                    <label>
+                      <input type="checkbox" value="terms">      I agree to the <a href="/terms">terms and conditions</a>
+                    </label>
+                  </p>
+                  <p>
+                    <button>Sign up</button>
+                    <button type="reset">Reset form</button>
+                  </p>
+                </form>
+              </li>
+            </ul>
+          </div>
         </div>
       </main>
       <footer class="c-footer">
