--- a/root/index.html
+++ b/root/index.html
@@ -45,32 +45,22 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="swiper-image" style="background: url('https://www.specialized.com/medias/03-ROAD-3212-Hero-2800x1620.jpg?context=bWFzdGVyfGltYWdlc3w2OTkyMTN8aW1hZ2UvanBlZ3xpbWFnZXMvaGJhL2g5Yi85MTMxMDkzODUyMTkwLmpwZ3xjMDI3ZWM3OGVhMzZmMjY3NDcxYzg4OTQxNmM5YTFhMDU3OGY5MmQxOWRkMTcyMWQzZjYxNjFmMmI5NTdjOGU4') no-repeat right bottom; background-size:cover;"></div>
+                <div class="swiper-image" style="background: url(../assets/images/banner01.png) no-repeat right bottom; background-size:cover;"></div>
                 <div class="overlay"></div>
                 <div class="content-wrapper">
                   <div class="content">
                     <h1>THE ULTIMATE GETAWAY VEHICLE</h1>
-                    <p>With speed, control, and confidence on any terrain, Diverge is the most capable gravel bike ever made. Switching from Midwest gravel at Mach 5 to rutted single track with ease, nothing helps you escape faster than Diverge.</p><a class="button" href="">Đăng Ký Tư Vấn</a>
+                    <p>With speed, control, and confidence on any terrain, Diverge is the most capable gravel bike ever made. Switching from Midwest gravel at Mach 5 to rutted single track with ease, nothing helps you escape faster than Diverge.</p><a class="button" href="https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation" target="_blank">Đăng Ký Tư Vấn</a>
                   </div>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="swiper-image" style="background: url('https://www.specialized.com/medias/07-ROAD-3300-TarmacStory-Hero-Handling-2800x1620.jpg?context=bWFzdGVyfGltYWdlc3w3MTc5NDN8aW1hZ2UvanBlZ3xpbWFnZXMvaDBmL2g4Yi85MTc1MzM1NTAxODU0LmpwZ3w0MDc5MjI3Y2QyMGFkMjVmN2NjMzVkN2U1YzJkNmE3N2Y0YWQ0ODIxNjVkYjhjODg1OGFjMjUzNGQxYjQ3ZTg2') no-repeat center center; background-size:cover;"></div>
+                <div class="swiper-image" style="background: url(../assets/images/banner01.png) no-repeat center center; background-size:cover;"></div>
                 <div class="overlay"></div>
                 <div class="content-wrapper content-right">
                   <div class="content">
                     <h1>ONE BIKE TO RULE THEM ALL</h1>
-                    <p>Morph Sagan’s superhuman speed with Alaphilippe’s climbing power and you’ve got the Tarmac SL7. The bike that knows no compromise. Climb on the lightest bike the rules allow, sprint on the fastest – all with legendary Tarmac handling. The only choice you need to make is when to attack.</p><a class="button" href="">Đăng Ký Tư Vấn</a>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="swiper-image" style="background: url('	https://www.specialized.com/medias/10-MTB-2197-EvoCarousel-2880x1620-01.jpg?context=bWFzdGVyfGltYWdlc3w5OTM3Mzd8aW1hZ2UvanBlZ3xpbWFnZXMvaGMxL2g4Zi85MTU2MTg5NDg3MTM0LmpwZ3w4OTBmZmI4OGNiNjYyNDNjOTA0MTJkYmUwNjhlOTE5MWZkOWMyMTNiMGYyMzZhMDM3YWVkOTA3ZmFmYmY0ZWRm') no-repeat right center; background-size:cover;"></div>
-                <div class="overlay"></div>
-                <div class="content-wrapper">
-                  <div class="content">
-                    <h1>THINK FASTEST</h1>
-                    <p>You’re looking at the fastest XC bikes in the world. Building on the legacy of the winningest full suspension XC bike in history, these freshly redesigned Epics deliver an unmatched combination of pedaling efficiency, light weight and control.</p><a class="button" href="">Đăng Ký Tư Vấn</a>
+                    <p>Morph Sagan’s superhuman speed with Alaphilippe’s climbing power and you’ve got the Tarmac SL7. The bike that knows no compromise. Climb on the lightest bike the rules allow, sprint on the fastest – all with legendary Tarmac handling. The only choice you need to make is when to attack.</p><a class="button" href="https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation" target="_blank">Đăng Ký Tư Vấn</a>
                   </div>
                 </div>
               </div>
@@ -86,7 +76,7 @@
         <div class="l-container">
           <div class="c-message">
             <div class="c-message_inner">
-              <p>We are a group of professional estate planners and insurance specialists. We are passionate about helping you build generational</p>
+              <p>WE MAKE MONEY WORK IN YOUR FAVOR</p>
             </div>
           </div>
           <div class="c-solution">
@@ -94,22 +84,19 @@
               <h3>Our Solution</h3>
               <ul>
                 <li>
-                  <div class="c-solution_tag">Bảo Hiểm Đầu Tư</div>
-                  <div class="c-solution_name">Hành Trình Hạnh Phúc</div>
+                  <div class="c-solution_name">Tax Planning</div>
                   <div class="c-solution_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
-                  <div class="c-solution_extra">Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống</div>
+                  <div class="c-solution_extra">Analyze financial plans and offer the best solutions for customers to get maximum tax reduction for income, financial investment, insurance</div>
                 </li>
                 <li>
-                  <div class="c-solution_tag">Bảo Hiểm Đầu Tư</div>
-                  <div class="c-solution_name">Hành Trình Hạnh Phúc</div>
+                  <div class="c-solution_name">Retirement Planning</div>
                   <div class="c-solution_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
-                  <div class="c-solution_extra">Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống</div>
+                  <div class="c-solution_extra">Secure your future high quality retirement with High Annual Income and Tax Free Retirement</div>
                 </li>
                 <li>
-                  <div class="c-solution_tag">Bảo Hiểm Đầu Tư</div>
-                  <div class="c-solution_name">Hành Trình Hạnh Phúc</div>
+                  <div class="c-solution_name">Estate Planning</div>
                   <div class="c-solution_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
-                  <div class="c-solution_extra">Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống</div>
+                  <div class="c-solution_extra">Step-by-step helping clients make a sensible legacy plan for each of their loved ones</div>
                 </li>
               </ul>
             </div>
@@ -119,30 +106,37 @@
               <p>Đừng ngần ngại tìm hiểu cùng Jolie!</p></a></div>
           <div class="c-trust">
             <h3>Có 1000+ khách hàng đã lựa chọn đồng hành cùng Jolie, bởi vì:</h3>
-            <p> had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no</p>
+            <p> Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.</p>
             <ul>
               <li>
                 <div class="c-trust_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
-                <h3>Compare Quotes</h3>
-                <p>Compare life insurance quotes with no obligation to buy.</p>
+                <h3>Trusted Partners</h3>
+                <p>Jolie's agent and team contract with many reputable financial companies in the market to bring you the best products</p>
               </li>
               <li>
                 <div class="c-trust_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
-                <h3>Compare Quotes</h3>
-                <p>Compare life insurance quotes with no obligation to buy.</p>
+                <h3>#1 Customer Service</h3>
+                <p>Jolie has always had the ideal of giving and serving, so Jolie always strives to bring satisfaction and the best experience to customers from the first time they meet.</p>
               </li>
               <li>
                 <div class="c-trust_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
-                <h3>Compare Quotes</h3>
-                <p>Compare life insurance quotes with no obligation to buy.</p>
+                <h3>Professional</h3>
+                <p>Professional process and a team of rich professionals are always ready to advise and support customers on any insurance-related issues.</p>
+              </li>
+              <li>
+                <div class="c-trust_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
+                <h3>Best Offer </h3>
+                <p>
+                  Thoroughly learn about the wishes and capabilities of the customer to come up with the most suitable and optimal financial fund for the customer's needs.To enable screen reader support, press Ctrl+Alt+Z To learn about keyboard shortcuts, press Ctrl+slash</p>
               </li>
             </ul>
           </div>
           <div class="c-boss">
-            <div class="c-boss_img"><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=400&amp;h=500" alt=""></div>
+            <div class="c-boss_img"><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=400&amp;h=400" alt=""></div>
             <div class="c-boss_content">
               <h3>Giới Thiệu</h3>
-              <p>JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life. With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of life insurance. From college funding, retirement saving plan, income protection to living benefits, what life insurance can do is not only to protect you and your loved one during the toughest moment but also to improve significantly the quality of life while you are still living.</p>
+              <p>JOLIE PHAN - JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life.</p>
+              <p>With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of tax free retirement</p>
             </div>
             <ul>
               <li><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
@@ -184,7 +178,7 @@
               </div>
             </div>
           </div>
-          <div class="c-contact"> 
+          <div class="c-contact d-none">
             <ul> 
               <li> 
                 <h3>Đăng ký dịch vụ Marketing </h3>
