--- a/root/index.html
+++ b/root/index.html
@@ -45,7 +45,7 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="swiper-image" style="background: url(../assets/images/banner01.png) no-repeat right bottom; background-size:cover;"></div>
+                <div class="swiper-image" style="background: url(../../assets/images/banner01.png) no-repeat right bottom; background-size:cover;"></div>
                 <div class="overlay"></div>
                 <div class="content-wrapper">
                   <div class="content">
@@ -55,7 +55,7 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="swiper-image" style="background: url(../assets/images/banner01.png) no-repeat center center; background-size:cover;"></div>
+                <div class="swiper-image" style="background: url(../../assets/images/banner01.png) no-repeat center center; background-size:cover;"></div>
                 <div class="overlay"></div>
                 <div class="content-wrapper content-right">
                   <div class="content">
@@ -76,83 +76,83 @@
         <div class="l-container">
           <div class="c-message">
             <div class="c-message_inner">
-              <p>WE MAKE MONEY WORK IN YOUR FAVOR</p>
+              <p>WE MAKE MONEY <br> WORK IN YOUR FAVOR</p>
             </div>
           </div>
           <div class="c-solution">
             <div class="c-solution_inner">
-              <h3>Our Solution</h3>
+              <h3>Insurance Solutions</h3>
               <ul>
                 <li>
                   <div class="c-solution_name">Tax Planning</div>
-                  <div class="c-solution_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
+                  <div class="c-solution_icon"><img class="lazyload" loading="lazy" width="70" height="70" data-src="assets/images/money-bag.png" src="assets/images/money-bag.png"></div>
                   <div class="c-solution_extra">Analyze financial plans and offer the best solutions for customers to get maximum tax reduction for income, financial investment, insurance</div>
                 </li>
                 <li>
                   <div class="c-solution_name">Retirement Planning</div>
-                  <div class="c-solution_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
+                  <div class="c-solution_icon"><img class="lazyload" loading="lazy" width="70" height="70" data-src="assets/images/heart.png" src="assets/images/heart.png"></div>
                   <div class="c-solution_extra">Secure your future high quality retirement with High Annual Income and Tax Free Retirement</div>
                 </li>
                 <li>
                   <div class="c-solution_name">Estate Planning</div>
-                  <div class="c-solution_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
+                  <div class="c-solution_icon"><img class="lazyload" loading="lazy" width="70" height="70" data-src="assets/images/home.png" src="assets/images/home.png"></div>
                   <div class="c-solution_extra">Step-by-step helping clients make a sensible legacy plan for each of their loved ones</div>
                 </li>
               </ul>
             </div>
           </div>
-          <div class="c-button"><a class="c-button_inner bounceIn" href="#">
+          <div class="c-button"><a class="c-button_inner bounceIn" href="https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation" target="_blank">
               <p>Bạn có muốn làm chủ tương lai?</p>
               <p>Đừng ngần ngại tìm hiểu cùng Jolie!</p></a></div>
           <div class="c-trust">
-            <h3>Có 1000+ khách hàng đã lựa chọn đồng hành cùng Jolie, bởi vì:</h3>
+            <h3>There are 1000+ customers who have chosen to accompany Jolie, because:</h3>
             <p> Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.</p>
             <ul>
               <li>
-                <div class="c-trust_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
+                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/crop.png" src="assets/images/crop.png"></div>
                 <h3>Trusted Partners</h3>
                 <p>Jolie's agent and team contract with many reputable financial companies in the market to bring you the best products</p>
               </li>
               <li>
-                <div class="c-trust_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
+                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/crop.png" src="assets/images/crop.png"></div>
                 <h3>#1 Customer Service</h3>
                 <p>Jolie has always had the ideal of giving and serving, so Jolie always strives to bring satisfaction and the best experience to customers from the first time they meet.</p>
               </li>
               <li>
-                <div class="c-trust_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
+                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/crop.png" src="assets/images/crop.png"></div>
                 <h3>Professional</h3>
                 <p>Professional process and a team of rich professionals are always ready to advise and support customers on any insurance-related issues.</p>
               </li>
               <li>
-                <div class="c-trust_icon"><img class="lazy" data-src="assets/images/crop.png"></div>
-                <h3>Best Offer </h3>
+                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/crop.png" src="assets/images/crop.png"></div>
+                <h3>Best Offer</h3>
                 <p>
                   Thoroughly learn about the wishes and capabilities of the customer to come up with the most suitable and optimal financial fund for the customer's needs.To enable screen reader support, press Ctrl+Alt+Z To learn about keyboard shortcuts, press Ctrl+slash</p>
               </li>
             </ul>
           </div>
           <div class="c-boss">
-            <div class="c-boss_img"><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=400&amp;h=400" alt=""></div>
+            <div class="c-boss_img"><img class="lazyload" loading="lazy" data-src="assets/images/jolie-phan.jpg" src="assets/images/jolie-phan.jpg" alt=""></div>
             <div class="c-boss_content">
-              <h3>Giới Thiệu</h3>
-              <p>JOLIE PHAN - JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life.</p>
+              <h3>About JOLIE PHAN</h3>
+              <p>JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life.</p>
               <p>With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of tax free retirement</p>
             </div>
             <ul>
-              <li><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
-              <li><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
-              <li><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
-              <li><img class="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
+              <li><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
+              <li><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
+              <li><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
+              <li><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></li>
             </ul>
           </div>
           <div class="c-video">
             <h3>Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?</h3>
             <ul>
               <li>
-                <iframe src="https://www.youtube.com/embed/CXE5hkd0XLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                <iframe loading="lazy" src="https://www.youtube.com/embed/CXE5hkd0XLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
               </li>
               <li>
-                <iframe src="https://www.youtube.com/embed/CXE5hkd0XLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                <iframe loading="lazy" src="https://www.youtube.com/embed/CXE5hkd0XLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
               </li>
             </ul>
           </div>
@@ -161,63 +161,22 @@
             <div class="c-user_inner">
               <div class="c-user_list user-slider">
                 <div class="c-user_item">
-                  <div class="c-user_img"><img src="https://api.lorem.space/image/fashion?w=250&amp;h=250" alt=""></div>
+                  <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=250&amp;h=250" src="https://api.lorem.space/image/fashion?w=250&amp;h=250" alt=""></div>
                   <h4>Diễn viên hài</h4>
                   <p> To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.</p>
                 </div>
                 <div class="c-user_item">
-                  <div class="c-user_img"><img src="https://api.lorem.space/image/fashion?w=250&amp;h=250" alt=""></div>
+                  <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=250&amp;h=250" src="https://api.lorem.space/image/fashion?w=250&amp;h=250" alt=""></div>
                   <h4>Diễn viên hài</h4>
                   <p> To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.</p>
                 </div>
                 <div class="c-user_item">
-                  <div class="c-user_img"><img src="https://api.lorem.space/image/fashion?w=250&amp;h=250" alt=""></div>
+                  <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=250&amp;h=250" src="https://api.lorem.space/image/fashion?w=250&amp;h=250" alt=""></div>
                   <h4>Diễn viên hài</h4>
                   <p> To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.</p>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="c-contact d-none">
-            <ul> 
-              <li> 
-                <h3>Đăng ký dịch vụ Marketing </h3>
-                <p>Sự Tận tâm và Kỹ lưỡng chính là hai yếu tố tiên quyết được đội ngũ của Jolie đặt vào trong từng hợp đồng, để mỗi khách hàng đều nắm được tường tận những quỹ tài chính mà đang làm chủ.</p>
-              </li>
-              <li>
-                <form action="/signup" method="post">
-                  <p>
-                    <label>First name</label><br>
-                    <input type="text" name="first_name">
-                  </p>
-                  <p>
-                    <label>Last name</label><br>
-                    <input type="text" name="last_name">
-                  </p>
-                  <p>
-                    <label>Email</label><br>
-                    <input type="email" name="email" required="">
-                  </p>
-                  <p>
-                    <label>Phone number</label><br>
-                    <input type="tel" name="phone">
-                  </p>
-                  <p>
-                    <label>Password</label><br>
-                    <input type="password" name="password">
-                  </p>
-                  <p>
-                    <label>
-                      <input type="checkbox" value="terms">      I agree to the <a href="/terms">terms and conditions</a>
-                    </label>
-                  </p>
-                  <p>
-                    <button>Sign up</button>
-                    <button type="reset">Reset form</button>
-                  </p>
-                </form>
-              </li>
-            </ul>
           </div>
         </div>
       </main>
@@ -256,19 +215,6 @@
           prevEl: ".swiper-button-prev"
         }
       });
-      //- const Userswiper = new Swiper(".user-slider", {
-      //-   direction: "horizontal",
-      //-   //- loop: true,
-      //-   //- effect: "fade",
-      //-   //- fadeEffect: {
-      //-   //-   crossFade: true
-      //-   //- },
-      //-   //- speed: 400,
-      //-   //- navigation: {
-      //-   //-   nextEl: ".swiper-button-next",
-      //-   //-   prevEl: ".swiper-button-prev"
-      //-   //- }
-      //- });
     </script>
   </body>
 </html>
