--- a/root/index.html
+++ b/root/index.html
@@ -150,8 +150,6 @@
                 <div class="item"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></div>
                 <div class="item"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></div>
               </div>
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-button-next"></div>
             </div>
           </div>
           <div class="c-video">
@@ -227,7 +225,7 @@
       $('.owl-carousel').owlCarousel({
       loop:true,
       margin: 20,
-      nav: false,
+      nav: true,
       responsive:{
           0:{
               items:2
