--- a/root/index.html
+++ b/root/index.html
@@ -141,46 +141,45 @@
             </div>
             <div class="swiper-user">
               <div class="owl-carousel owl-theme">
-                <div class="item"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></div>
-                <div class="item"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></div>
-                <div class="item"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></div>
-                <div class="item"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></div>
-                <div class="item"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></div>
-                <div class="item"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></div>
-                <div class="item"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></div>
-                <div class="item"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=300&amp;h=250" src="https://api.lorem.space/image/fashion?w=300&amp;h=250" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387.jpg" src="assets/images/794A5387.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387_z.jpg" src="assets/images/794A5387_z.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5562.jpg" src="assets/images/794A5562.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/beauty_20210828121805.jpg" src="assets/images/beauty_20210828121805.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387.jpg" src="assets/images/794A5387.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387_z.jpg" src="assets/images/794A5387_z.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5562.jpg" src="assets/images/794A5562.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/beauty_20210828121805.jpg" src="assets/images/beauty_20210828121805.jpg" alt=""></div>
               </div>
             </div>
           </div>
           <div class="c-video">
-            <h3>Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?</h3>
+            <h3>What our customers say about us</h3>
             <ul>
               <li>
-                <iframe loading="lazy" src="https://www.youtube.com/embed/CXE5hkd0XLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                <iframe class="lazyload" loading="lazy" src="https://www.youtube.com/embed/CXE5hkd0XLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
               </li>
               <li>
-                <iframe loading="lazy" src="https://www.youtube.com/embed/CXE5hkd0XLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                <iframe class="lazyload" loading="lazy" src="https://www.youtube.com/embed/CXE5hkd0XLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
               </li>
             </ul>
           </div>
           <div class="c-user">
-            <h3>Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?</h3>
             <div class="c-user_inner">
               <div class="c-user_list user-slider">
                 <div class="c-user_item">
-                  <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=250&amp;h=250" src="https://api.lorem.space/image/fashion?w=250&amp;h=250" alt=""></div>
-                  <h4>Diễn viên hài</h4>
-                  <p> To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.</p>
+                  <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/PXL_20210316_011135625.jpg" src="assets/images/PXL_20210316_011135625.jpg" alt=""></div>
+                  <h4>Lan Nguyen</h4>
+                  <p> Jolie helped me get the best insurance profile ever. She is always friendly and very reliable.</p>
                 </div>
                 <div class="c-user_item">
-                  <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=250&amp;h=250" src="https://api.lorem.space/image/fashion?w=250&amp;h=250" alt=""></div>
-                  <h4>Diễn viên hài</h4>
-                  <p> To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.</p>
+                  <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/dr-terry-truong.jpg" src="assets/images/dr-terry-truong.jpg" alt=""></div>
+                  <h4>DR Terry Trương</h4>
+                  <p> Thanks to my aunt's introduction, I got to know Jolie and was supported by her retirement insurance. I am very satisfied with Jolie's service.</p>
                 </div>
                 <div class="c-user_item">
-                  <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="https://api.lorem.space/image/fashion?w=250&amp;h=250" src="https://api.lorem.space/image/fashion?w=250&amp;h=250" alt=""></div>
-                  <h4>Diễn viên hài</h4>
-                  <p> To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.</p>
+                  <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/beauty_20210518144219.jpg" src="assets/images/beauty_20210518144219.jpg" alt=""></div>
+                  <h4>Trinh Nguyen</h4>
+                  <p> I do nails so I am very worried about my health and future. So I reached out to Jolie for advice on a retirement plan. She helped me a lot and gave me the best retirement package. Sincere thanks to Jolie and team</p>
                 </div>
               </div>
             </div>
@@ -226,6 +225,8 @@
       loop:true,
       margin: 20,
       nav: true,
+      lazyLoad:true,
+      navText: ["<img src='../../assets/images/back.png'>","<img src='../../assets/images/next.png'>"],
       responsive:{
           0:{
               items:2
