--- a/root/index.html
+++ b/root/index.html
@@ -110,22 +110,22 @@
             <p> Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.</p>
             <ul>
               <li>
-                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/crop.png" src="assets/images/crop.png"></div>
+                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/shield.png" src="assets/images/shield.png"></div>
                 <h3>Trusted Partners</h3>
                 <p>Jolie's agent and team contract with many reputable financial companies in the market to bring you the best products</p>
               </li>
               <li>
-                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/crop.png" src="assets/images/crop.png"></div>
+                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/customer-service.png" src="assets/images/customer-service.png"></div>
                 <h3>#1 Customer Service</h3>
                 <p>Jolie has always had the ideal of giving and serving, so Jolie always strives to bring satisfaction and the best experience to customers from the first time they meet.</p>
               </li>
               <li>
-                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/crop.png" src="assets/images/crop.png"></div>
+                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/badge.png" src="assets/images/badge.png"></div>
                 <h3>Professional</h3>
                 <p>Professional process and a team of rich professionals are always ready to advise and support customers on any insurance-related issues.</p>
               </li>
               <li>
-                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/crop.png" src="assets/images/crop.png"></div>
+                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/best-seller.png" src="assets/images/best-seller.png"></div>
                 <h3>Best Offer</h3>
                 <p>
                   Thoroughly learn about the wishes and capabilities of the customer to come up with the most suitable and optimal financial fund for the customer's needs.To enable screen reader support, press Ctrl+Alt+Z To learn about keyboard shortcuts, press Ctrl+slash</p>
@@ -143,12 +143,14 @@
               <div class="owl-carousel owl-theme">
                 <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387.jpg" src="assets/images/794A5387.jpg" alt=""></div>
                 <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387_z0.jpg" src="assets/images/794A5387_z0.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5562pp.jpg" src="assets/images/794A5562pp.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/beauty_20210828121805.jpg" src="assets/images/beauty_20210828121805.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5186-min.jpg" src="assets/images/794A5186-min.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" alt=""></div>
                 <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387.jpg" src="assets/images/794A5387.jpg" alt=""></div>
                 <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387_z0.jpg" src="assets/images/794A5387_z0.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5562pp.jpg" src="assets/images/794A5562pp.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/beauty_20210828121805.jpg" src="assets/images/beauty_20210828121805.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5186-min.jpg" src="assets/images/794A5186-min.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" alt=""></div>
               </div>
             </div>
           </div>
@@ -156,10 +158,10 @@
             <h3>What our customers say about us</h3>
             <ul>
               <li>
-                <iframe class="lazyload" loading="lazy" src="https://www.youtube.com/embed/CXE5hkd0XLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                <iframe class="lazyload" loading="lazy" src="https://www.youtube.com/embed/Sp7MkwNVWPE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
               </li>
               <li>
-                <iframe class="lazyload" loading="lazy" src="https://www.youtube.com/embed/CXE5hkd0XLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                <iframe class="lazyload" loading="lazy" src="https://www.youtube.com/embed/flGKab64l9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
               </li>
             </ul>
           </div>
